--- a/_rmd/2018-03-13-TSrepr-clustering-time-series-representations.Rmd
+++ b/_rmd/2018-03-13-TSrepr-clustering-time-series-representations.Rmd
@@ -3,7 +3,7 @@ title: TSrepr use case - Clustering time series representations in R
 author: Peter Laurinec
 layout: post
 published: no
-status: process
+status: processed
 tags: R TSrepr clustering
 draft: no
 ---
