Testing new blog post on bootstrapping

--- a/_rmd/2019-02-03-Multiple-data-streams-clustering-in-r.Rmd
+++ b/_rmd/2019-02-03-Multiple-data-streams-clustering-in-r.Rmd
@@ -3,7 +3,7 @@ layout: post
 title: Multiple Data (Time Series) Streams Clustering
 author: Peter Laurinec
 published: true
-status: process
+status: processed
 tags: R TSrepr clustering
 draft: false
 ---
