post new blog post about bootstrapping

--- a/_rmd/2019-10-21-Bootstrapping-time-series-for-improving-forecasting-in-R.Rmd
+++ b/_rmd/2019-10-21-Bootstrapping-time-series-for-improving-forecasting-in-R.Rmd
@@ -4,7 +4,7 @@ author: "Peter Laurinec"
 layout: post
 published: false
 status: process
-tags: test forecast
+tags: R forecast
 draft: no
 ---
 
@@ -418,4 +418,4 @@ In this blog post, I showed you how to simply use four various bootstrapping met
 
 [1] Bergmeir C., Hyndman R.J., Benítez J.M.: Bagging exponential smoothing methods using stl decomposition and box–cox transformation. International Journal of Forecasting, 32(2):303–312, (2016)
 
-[2] Laurinec P., Lóderer M., Lucká M. et al.: Density-based unsupervised ensemble learning methods for time series forecasting of aggregated or clustered electricity consumption, Journal Intelligent Information Systems, 53(2):219-239, (2019). [DOI link](https://doi.org/10.1007/s10844-019-00550-3)
+[2] Laurinec P., Loderer M., Lucka M. et al.: Density-based unsupervised ensemble learning methods for time series forecasting of aggregated or clustered electricity consumption, Journal Intelligent Information Systems, 53(2):219-239, (2019). [DOI link](https://doi.org/10.1007/s10844-019-00550-3)
