edited TSrepr package page (R)

--- a/_rmd/2019-10-21-Bootstrapping-time-series-for-improving-forecasting-in-R.Rmd
+++ b/_rmd/2019-10-21-Bootstrapping-time-series-for-improving-forecasting-in-R.Rmd
@@ -3,7 +3,7 @@ title: Bootstrapping time series for improving forecasting accuracy
 author: "Peter Laurinec"
 layout: post
 published: false
-status: process
+status: processed
 tags: R forecast
 draft: no
 ---
